# jdb_pgm

./: .gitignore  .mise.toml  Cargo.toml  README.md  package.json  skills
.cargo/: config.toml
.github/workflows/: preflight.yml  release-on-tag.yml
jdb_ftl/: AGENTS.md  Cargo.toml  LICENSE.md  README.mdt  bench.js  build.rs  full_bench.sh  init.js  quick_bench.sh  readmeMerge.js  regress.js  status.sh  todo.md  tune.py
jdb_ftl/.agent/tasks/: readme_revision_plan.md
jdb_ftl/benches/: main.rs  name.rs
jdb_ftl/benches/js/: CONV.js  conf.js  md.js  regress.js  svg.js  svg_helper.js  table.js
jdb_ftl/benches/js/i18n/en/: bench.md  md.js  regress.js  table.js
jdb_ftl/benches/js/i18n/zh/: bench.md  md.js  regress.js  table.js
jdb_ftl/benches/js/lib/: bench.js  conv.js  data.js  md.js  svg.conf.js
jdb_ftl/benches/js/svg/: algorithms.js  codec.js  codec_dist.js  flush.js  metrics.js  replay.js  structures.js  tuning.js
jdb_ftl/benches/js/svg/json/: epsilon_sweep.json  key_stats.json  stats.json
jdb_ftl/examples/: Cargo.toml  bench_ftl.rs  clippy.sh  count_keys.sh  debug_slope.sh  direct_mode_stats.sh  epsilon_sweep.sh  perfect_stats.sh  pfor_pgm_sim.sh  score.sh  seg_padding_stats.sh  seg_stats.sh  tune.sh
jdb_ftl/examples/src/: lib.rs
jdb_ftl/examples/src/util/: io.rs  mod.rs  path.rs  trace.rs
jdb_ftl/issue/: compression_rate_optimization.md  seg_optimization.md
jdb_ftl/readme/: en.md  en.toc.md  zh.md  zh.toc.md
jdb_ftl/readme/en/: architecture.md  bench.md  benchmark.md  codec.md  ef.md  flush.md  outlier.md  references.md  structures.md  tuning.md
jdb_ftl/readme/zh/: architecture.md  bench.md  benchmark.md  codec.md  ef.md  flush.md  outlier.md  references.md  structures.md  tuning.md
jdb_ftl/sh/: bench.sh  gen_doc.sh
jdb_ftl/sh/vite/: .gitignore  build.js  index.html  package.json  vite.bundle.config.js  vite.config.js
jdb_ftl/sh/vite/src/: bundle.js  main.js  main.styl  render.js  template.pug
jdb_ftl/sh/vite/src/styles/: main.styl
jdb_ftl/skill/: md.md
jdb_ftl/src/: error.rs  ftl_impl.rs  ftl_trait.rs  lib.rs  mem.rs  pgm.rs
jdb_ftl/src/bench/: base.rs  mod.rs
jdb_ftl/src/ftl/: bg.rs  error.rs  frame.rs  l1.rs  mod.rs  stats.rs
jdb_ftl/src/ftl/codec/: bit_writer.rs  mod.rs  optimal.rs  util.rs
jdb_ftl/src/ftl/codec/decoder/: bits.rs  decode.rs  decode_group.rs  decode_segment.rs  mod.rs
jdb_ftl/src/ftl/codec/ef/: iter.rs  mod.rs  traits.rs  util.rs  view.rs  writer.rs
jdb_ftl/src/ftl/codec/encoder/: direct.rs  encode.rs  mod.rs
jdb_ftl/src/ftl/codec/encoder/pgm/: assemble.rs  mod.rs  parse.rs  plan.rs  types.rs
jdb_ftl/src/ftl/conf/: mod.rs
jdb_ftl/src/ftl/seg/: mod.rs
jdb_ftl/tests/: ftl.rs  test_ef_u16.rs  verify.rs
jdb_pc/: Cargo.toml  bench_pc.sh  build.rs
jdb_pc/benches/: base.rs  bench.json  bench_array.rs  bench_pc.rs  bench_sucds.rs  common.rs  main.rs
jdb_pc/benches/js/: bench.js  conf.js  md.js  regress.js  svg.js  table.js
jdb_pc/benches/js/i18n/en/: bench.md  md.js  regress.js  table.js
jdb_pc/benches/js/i18n/zh/: table.js
jdb_pc/benches/js/lib/: bench.js  conv.js  json.js  md.js
jdb_pc/examples/: lang.rs  library.rs  main.rs  pgm.rs  report.rs  scenario.rs  score.rs  sucds.rs  vec.rs
jdb_pc/readme/en/: bench.md
jdb_pc/src/: io.rs  iter.rs  lib.rs  types.rs
jdb_pc/tests/: compression.rs  pc.rs
jdb_pgm/: Cargo.toml  README.mdt  bench.js
jdb_pgm/benches/: main.rs
jdb_pgm/benches/js/: CONV.js  conf.js  md.js  regress.js  svg.js  table.js
jdb_pgm/benches/js/i18n/en/: table.js  tpl.md
jdb_pgm/benches/js/i18n/zh/: table.js  tpl.md
jdb_pgm/benches/js/lib/: bench.js  conv.js  fmt.js  md.js  style.js
jdb_pgm/benches/parts/: bench_binary.rs  bench_btreemap.rs  bench_common.rs  bench_external_pgm.rs  bench_hashmap.rs  bench_jdb_pgm.rs
jdb_pgm/examples/: accuracy.rs  inspect.rs  resolution_test.rs  simple_benchmark.rs  test_bitcode.rs  test_ext.rs  test_pgm_bitcode.rs
jdb_pgm/readme/: en.md  zh.md
jdb_pgm/readme/en/: bench.md
jdb_pgm/readme/zh/: bench.md
jdb_pgm/src/: build.rs  consts.rs  data.rs  lib.rs  types.rs
jdb_pgm/tests/: data.rs  pgm.rs  pgm_large.rs  pgm_range.rs
jdb_pgm_lib/: Cargo.toml
jdb_pgm_lib/src/: bits.rs  error.rs  lib.rs
