[package]
name = "jdb_ftl"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/js0-site/jdb_pgm.git"
homepage = "https://github.com/js0-site/jdb_pgm/tree/main/jdb_ftl"
description = "jdb_ftl"
readme = "README.md"
license-file = "LICENSE.md"

[features]
default = []
bench_base = []
bench_ftl = []
bench_all = ["bench_base", "bench_ftl", "stats"]
stats = []


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "main"
harness = false

[dependencies]
crossfire = "3.0.0"
log_init = "0.1.34"
rapidhash.workspace = true
static_init = "1.0.4"
thiserror = "1.0" # Added thiserror dependency
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.8"
aok = "0.1.18"
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"
tokio = { version = "1.49.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }
fastrand = "2.0"
sonic-rs = "0.5"
humansize = "2.1.3"
hdrhistogram = "7.5"
mimalloc = { version = "0.1.48", features = ["v3"] }
