[package]
name = "jdb_pgm"
version = "0.3.16"
edition = "2024"
description = "Ultra-fast learned index for sorted keys / 面向排序键的超快学习型索引"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/jdb_pgm.git"
keywords = ["learned-index", "pgm-index", "search", "database", "performance"]
categories = ["algorithms", "data-structures"]
authors = ["jssite@googlegroups.com"]
readme = "README.md"
homepage = "https://github.com/js0-site/jdb_pgm/tree/main/jdb_pgm"
autobenches = false

[features]
default = []
data = []
bitcode = ["dep:bitcode"]
bench = []

[dependencies.bitcode]
version = "0.6.9"
optional = true

[dependencies.clap]
version = "4.5.54"
features = ["derive"]

[dev-dependencies]
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"
aok = "0.1.18"
rand = "0.9"
sucds = "0.8.3"
tikv-jemallocator = "0.6"
serde = "1.0"
serde_json = "1.0"
sonic-rs = "0.5"
rand_distr = "0.5.1"
rapidhash = "4.2.1"

[dev-dependencies.pgm_index]
git = "https://github.com/i18nsite/pgm_index.git"
branch = "main"

[dev-dependencies.jdb_pc]
path = "../jdb_pc"
version = "0.1.0"

[dev-dependencies.criterion]
version = "0.8"
features = ["html_reports"]

[dev-dependencies.tikv-jemalloc-ctl]

version = "0.6"
features = ["stats"]


[[example]]
name = "simple_benchmark"
path = "examples/simple_benchmark.rs"

[[example]]
name = "inspect"
path = "examples/inspect.rs"

[[example]]
name = "test_bitcode"
path = "examples/test_bitcode.rs"
required-features = ["bitcode"]

[[bench]]
name = "main"
path = "benches/main.rs"
harness = false
