[package]
edition = "2024"
name = "jdb_ftl_example"
version = "0.1.0"

[dependencies]
jdb_ftl = { path = "..", features = ["stats"] }
rapidhash.workspace = true
sonic-rs = "0.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
humansize = "2.1.3"
hdrhistogram = "7.5"

# No need to explicitly list every [[bin]] if they are in src/bin/
# Cargo will auto-discover them.
